<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.II.smartGrid</groupId>
  <artifactId>smartGrid</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>smartGrid</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>


  
  <repositories>
    <repository>
        <id>tilab</id>
        <url>https://jade.tilab.com/maven/</url>
    </repository>
  </repositories>
  
  <build>
    <plugins>
        <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
            <source>11</source>
            <target>11</target>
        </configuration>
        </plugin>
    </plugins>
  </build>

  <profiles>
  	<profile>
    	<id>jade-main</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.5.0</version>
                        <configuration>
                            <mainClass>jade.Boot</mainClass>
                            <arguments>
                                <argument>-conf</argument>
                                <argument>src/main/resources/jade-main-container.properties</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jade-setup-simulation</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.5.0</version>
                        <configuration>
                            <mainClass>jade.Boot</mainClass>
                            <arguments>
                                <argument>-conf</argument>
                                <argument>src/main/resources/jade-setup-simulation.properties</argument>
                            </arguments>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
       	</profile>
  </profiles>

  <dependencies>
    <dependency>
        <groupId>com.tilab.jade</groupId>
        <artifactId>jade</artifactId>
        <version>4.6.0</version>
    </dependency>
    <dependency>
        <groupId>com.tilab.jade</groupId>
        <artifactId>jade-test-suite</artifactId>
        <version>1.14.0</version>
    </dependency>

    <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>2.0.17</version>
    </dependency>

    <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>2.0.17</version>
    </dependency>

	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-core</artifactId>
	    <version>2.19.0</version>
	</dependency>
  
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	    <version>2.19.0</version>
	</dependency>

    <!-- Dependency for retrieving timezone having lat and long-->
    <dependency>
        <groupId>us.dustinj.timezonemap</groupId>
        <artifactId>timezonemap</artifactId>
        <version>4.5</version>
    </dependency>

    <!-- Dependency for graph handling-->
    <dependency>
        <groupId>org.jgrapht</groupId>
        <artifactId>jgrapht-core</artifactId>
        <version>1.5.2</version>
    </dependency>

  </dependencies>
</project>
